<resources>
    <string name="app_name">Tuklin</string>
    <string name="str_twist">    Снимает напряжение с мышц спины, растягивает ягодицы.\n\n
        Шаг 1: Лягте на коврик, вытяните руки по сторонам.\n\n
        Шаг 2: Согните правое колено и положите его на пол с левой стороны от тела, взгляд направьте вправо. \n\n
        Шаг 1: Задержитесь в положении на 30 секунд и повторите в другую сторону. \n\n </string>
    <string name="str_bridge">    Шаг 1: Лягте на коврик, положите руки вдоль тела, согните колени и поставьте стопы на пол на ширине бёдер.\n\n
        Шаг 2: Поднимите таз от пола, вытяните тело в одну линию от плеч до коленей, сожмите ягодицы, надавите ладонями на пол.  </string>
    <string name="str_cat">    Эта связка растягивает мышцы плеч и спины. \n\n
        Шаг 1: Встаньте на колени, положите лоб на коврик, руки вытяните перед собой. Задержитесь в позе на три дыхательных цикла.\n\n
        Шаг 2: Встаньте на четвереньки и с выдохом плавно прогните спину.\n\n
        Шаг 3: Затем со вдохом округлите позвоночник, втягивая живот. Задержитесь в позе на три дыхательных цикла.\n\n</string>
    <string name="str_table">    Прокачивает равновесие и укрепляет ягодицы и спину. \n\n
        Шаг 1: Встаньте на четвереньки и втяните живот. \n\n
        Шаг 2: Выпрямите одну руку вперед и скрестную ей ногу назад, задержитесь на 5-7 секунд. \n\n
        Шаг 3: Повторите с другой стороны.\n\n</string>
    <string name="str_plank">    Движение укрепляет мышцы пресса, ног и плеч. \n\n
        Шаг 1: Примите упор лёжа, опустите локти на пол. \n\n
        Шаг 2: Подкрутите таз, чтобы поясница не проваливалась. \n\n
        Следите, чтобы поясница не провисала.\n\n</string>
    <string name="str_rider">    Увеличивает мобильность бёдер, растягивает сгибатели бедра. \n\n
        Шаг 1: Опуститесь на одно колено, поставьте руки на бёдра. \n\n
        Шаг 2: Отодвиньте опорное колено назад, углубляя выпад, насколько хватает растяжки. \n\n
        Шаг 3: Удерживайте положение 30 сукунд, затем поменяйте ногу и повторите.\n\n</string>
    <string name="str_incline">    Растягивает заднюю сторону бедра, плечи и спину. \n\n
        Шаг 1: Встаньте в одном‑двух шагах от возвышенности(стула/стола/...). \n\n
        Шаг 2: Опустите кисти или локти на поверхность, растягивая спину и плечи. \n\n </string>
    <string name="str_butterfly">    Увеличивает мобильность бёдер. \n\n
        Шаг 1: Сядьте рядом со стеной, прижмитесь к ней спиной. \n\n
        Шаг 2: Согните колени, соедините стопы, положите руки на щиколотки и прижмите пятки к тазу. \n\n
        Шаг 3: Медленно наклонитесь вперёд, опустите голову и задержитесь в положении на 10-15 секунд. \n\n
        Шаг 4: Вернитесь в исходное положение \n\n </string>
    <string name="str_pushup_classic">    Правльное положене тала при выполнении классическиих отжиманиий: \n\n
        Плечи должны быть немного выше уровня таза. Голова должна смотреть в пол. \n\n
        Ладони — на вертикали плеч, параллельно друг другу, направление пальцев — параллельно телу.\n\n
        Правильная постановка рук при классических отжиманиях от пола — на ширине плеч или немного шире. </string>
    <string name="str_pushup_wide">    Шаг 1: Примите положение для отжиманий от пола с широким положением рук.\n
        Ладони развёрнуты в стороны. Не опускайте таз. Это исходное положение. \n\n
        Шаг 2: Сгибая локти, опуститесь грудью к полу.\n\n
        Шаг 3: На выдохе, напрягая грудные мышцы и выпрямляя локти, поднимитесь в исходное положение. </string>
    <string name="str_pushup_diamond">    Отжимания алмаз сильно отличаются от других видов, потому что основную нагрузку дают именно трицепсам.\n\n
        Шаг 1: Примите положение классческх отжиманий от пола.   \n\n
        Шаг 2: Сведите руки так, чтобы большие и указательные пальцы образовывали треугольник(алмаз. Отсюда и иназвание)\n\n
        Шаг 3: Сгибая локти, опуститесь грудью к полу.\n\nШаг 3: На выдохе, напрягая грудные мышцы и выпрямляя локти, поднимитесь в исходное положение.
        Шаг 4: На выдохе, напрягая грудные мышцы и выпрямляя локти, поднимитесь в исходное положение.
    </string>
    <string name="str_pushup_highground">    Как и в других вариациях отжиманий, нагрузка смещается. На этот раз - на верхнюю часть грудных мышц.\n\n
        Шаг 1: Примите положение классческх отжиманий от пола.   \n\n
        Шаг 2: Поставьте ноги на какую-либо возвышенность(чем выже, тем сложнее)\n\n
        Шаг 3: Сгибая локти, опуститесь грудью к полу.\n\nШаг 3: На выдохе, напрягая грудные мышцы и выпрямляя локти, поднимитесь в исходное положение.
        Шаг 4: На выдохе, напрягая грудные мышцы и выпрямляя локти, поднимитесь в исходное положение.
    </string>
    <string name="str_pullup_australian">    Подтягивания для тех, кто пока еще не может выполнить классиический вариант подтягииваний.\n\n
        Шаг 1: Возьмитесь за низкий турник прямым хватом на ширине плеч, вытяните тело в одну линию, сведиите лопатки. \n\n
        Шаг 2: Подтяните себя до касания турника грудью. \n\n
        Шаг 3: Вернитесь в исходное положение. </string>
    <string name="str_pullup_classic">      Такой хват лучше других нагружает трапециевидную мышцу, расположенную в средней части спины, и плечелучевую — мышцу предплечья.\n\n
        Шаг 1: Повисните на турнике, опустите плечи и сведите лопатки. Ширина хвата чуть шире ширины плеч.\n\n
        Шаг 2: Подтяните себя вверх до выхода подбородка(чем выше, тем лучше.) за турник.\n\n
        Шаг 3: Медленно, без рывков опуститесь в иисходное положение.\n\n
        Не вытягивайте шею вверх или вперёд, не расслабляйте плечи в нижней части подтягивания!</string>
    <string name="str_pullup_reversegrip">    Такой хват чуть больше нагружает бицепс и подостную мышцу, выстилающую лопатку.\n\n
        Техника выполнениия такая же, как при выполнении классических подтягиваний.\n\n
        Единственное отличие - нужно взяться за перекладину обратным хватом.
    </string>
    <string name="str_pullup_wide">    Такой вариант сложнее классических подтягиваний с руками на ширине плеч.\n
        В этой вариации больше задействуется верхняя часть широчайших мышц спины. Одно из самых эффективных упражнение для увеличения ширины спины. \n
        Придает V-образную форму.\n\n
        Ширина хвата должна быть в 1.5-2 раза шире ширины плеч. В остальном техника полностью идентична классическим подтягиваниям
    </string>
    <string name="str_squats_bulgarian">    Эта вариация приседаний гораздо лучше прокачивает заднюю часть бедра и ягодицы, чем движение на двух ногах.\n\n
        Шаг 1: Встаньте в шаге от устойчивой опоры спиной к ней, поставьте на неё одну ногу. Руки уберите на пояс.\n\n
        Шаг 2: Согните опорную ногу и сделайте приседание, сохраняя спину прямой. Следите, чтобы косточки таза и плечи создавали ровный прямоугольник, без перекосов на одну сторону.
    </string>
    <string name="str_squats_classic">    Встаньте прямо, поставьте ноги на ширине плеч или немного уже, носки стоп чуть разверните в стороны. Руки поставьте на пояс или соедините перед собой.
        Чуть отведите таз назад, согните колени и присядьте настолько глубоко, насколько получится.
        Следите, чтобы спина оставалась прямой и не округлялась в пояснице даже в нижней точке упражнения. Также проверьте, чтобы пятки были прижаты к полу и не отрывались. Если не удаётся удержать спину прямой, а пятки — прижатыми, опускайтесь вниз до того момента, пока получается соблюдать технику.
        На выходе из приседания следите, чтобы колени не заворачивались внутрь. Чтобы избежать этой ошибки, немного разводите их наружу, когда встаёте.
    </string>
    <string name="str_abs_twisting">    Это стандартное упражнение на пресс. Именно во время выполнения скручиваний включаются в работу прямая мышца брюшного пресса (она отвечает за кубики на животе), большая
        грудная мышца, наружные и внутренние косые, а также поперечные мышцы брюшного пресса.
        Выполнение. Следите за тем, чтобы средняя и нижняя части спины были прижаты к полу. Таким образом вы избегаете подключения к работе сгибающих мышц бедра. Руки старайтесь держать у висков,
        не тянитесь вверх подбородком и шеей. Поднимать вас должны мышцы пресса. На подъёме следует делать глубокий выдох, вдох — в нижнем положении.
    </string>
    <string name="str_abs_scissors">    Это упражнение направлено на проработку нижнего пресса (абдоминальной части). Мышцы, задействованные при выполнении этого упражнения: подвздошно-поясничная мышца, напрягатель широкой
        фасции, портняжная мышца, прямая мышца бедра, длинная и короткая приводящие мышцы, гребенчатая мышца, прямые, косые и поперечные мышцы живота, квадрицепсы.
        Выполнение. Лягте на пол, руки вытяните вдоль тела и прижмите к полу. Приподнимите ноги над полом и выполните скрещивающиеся движения.
        Во время выполнения упражнения следите за тем, чтобы поясница была прижата к полу. Чем ниже будут опущены ноги, тем больше нагрузка на нижний пресс. Если вам сложно держать ноги на таком уровне,
        поднимите их немного выше. Если чувствуете, что поясница отрывается от пола, поднимите ноги чуть выше. Следите за тем, чтобы ноги были выпрямлены.
    </string>
    <string name="str_frontlever_tuck">    Самое простое упражнение для тренировки всех основных мышц спины (широчайшей, большой и малой круглых, трапециевидной и ромбовидной),
        которое практически все новички выполняют неправильно, допуская две главных ошибки. Во-первых, нужно держать спину ровной, а не
        скругляться в ней. Во-вторых, ваша попа должна быть НАД горизонтальной линией, а не проваливаться. Только при выполнении двух этих условий
        вы будете получать толк от упражнения, а иначе можно держать закрытый передний вис по 30-60 секунд, а при любой попытке раскрыться — сразу падать.
    </string>
    <string name="str_frontlever_semi_tuck">    Полузакрытый передний вис. Главное отличие этого упражнения от предыдущего заключается в
        положении ваших коленей. Если в первом упражнении они были у груди и ПЕРЕД перекладиной,
        то теперь вы выносите их ЗА перекладину. Из-за этого увеличивается длина рычага, повышается уровень нагрузки и
        обеспечивается прогрессия, необходимая для изучения переднего виса.
    </string>
    <string name="str_frontlever_bent_legs">    Это, наверное, самое лучшее подводящее упражнение для переднего виса. Главное - следить за техникой.
    </string>
    <string name="str_frontlever_one_bent_leg">    Этот вариант является логичным продолжением предыдущей прогрессии и финальной прогрессией перед передним висом.
    </string>
    <string name="str_tips_warmup">  1) Разминка. Кардио - 3-5 минут легкого бега, велотренажера;
        упражнения на суставы - начиная от шеи и до голеностопов;
        динамическая растяжка тех мышц, над которыми планируешь поработать в основной части тренировки.
    </string>
    <string name="str_tips_hitch">  2) Заминка. Мягкий стретчинг повышает подвижность суставов и эластичность мышц, снижает риск травм и ускоряет восстановление после тренировки. Упражнения на растяжку усиливают кровообращение, поэтому крепатура - боль в мышцах, проходит быстрее. Кроме того, растяжка способствует выработке эндорфинов и обеспечивает ощущения спокойствия и удовлетворения.
    </string>
    <string name="str_tips_change_style">  3) Меняй наргрузку. Не придерживайся слишком долго одной схемы тренировок - организм привыкает к одинаковым нагрузкам. Каждые несколько недель меняй виды тренировок.
    </string>
</resources>