<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context="com.example.tuklin.WorkOutActivity">




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary_dark"
        android:textAlignment="textEnd"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="WorkOut App"
        app:titleTextColor="#FFF"
        />




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:background="@color/white_black"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_tips_warmup"
                    android:textColor="@color/black_white"
                    android:textSize="20dp"/>


                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="4.0dp"
                    android:background="@color/black_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_tips_hitch"
                    android:textColor="@color/black_white"
                    android:textSize="20dp"/>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="4.0dp"
                    android:background="@color/black_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_tips_change_style"
                    android:textColor="@color/black_white"
                    android:textSize="20dp"/>



            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</LinearLayout>